fixed a firefox whitespace issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    white-space: nowrap;
 }
 p {
     display: inline-block;
